Link color change, added the scroll parallax js to every page, etc

--- a/allspaxfaces.html
+++ b/allspaxfaces.html
@@ -23,141 +23,145 @@
 
     </head>
     <body>
-        <div class="text-box flex-container unselectable">
-            <div>
+        <div id="bg"></div>
+        <div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/spax/Blush.png
+                        "></img>
+                    Blush
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/spax/Confused.png
+                        "></img>
+                    Confused
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
                     <img src="
-                images/spax/Blush.png
+                images/spax/Disappointed.png
                     "></img>
-                Blush
+                Disappointed
+                </div>
             </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
+            <div class="text-box flex-container unselectable">
+                <div>
                     <img src="
-                images/spax/Confused.png
+                images/spax/Dizzy.png
                     "></img>
-                Confused
+                Dizzy
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Enraged.png
+                    "></img>
+                Enraged
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Happy.png
+                    "></img>
+                Happy
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Look.png
+                    "></img>
+                Look
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Neutral.png
+                    "></img>
+                Neutral
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Pensive.png
+                    "></img>
+                Pensive
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Sleep.png
+                    "></img>
+                Sleep
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Smirk.png
+                    "></img>
+                Smirk
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Surprised.png
+                    "></img>
+                Surprised
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Sus.png
+                    "></img>
+                Sus
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Sweat_Drop.png
+                    "></img>
+                Sweat Drop
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Talk.png
+                    "></img>
+                Talk
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Woo.png
+                    "></img>
+                Woo!
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Worried.png
+                    "></img>
+                Worried
+                </div>
             </div>
         </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Disappointed.png
-                "></img>
-            Disappointed
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Dizzy.png
-                "></img>
-            Dizzy
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Enraged.png
-                "></img>
-            Enraged
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Happy.png
-                "></img>
-            Happy
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Look.png
-                "></img>
-            Look
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Neutral.png
-                "></img>
-            Neutral
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Pensive.png
-                "></img>
-            Pensive
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Sleep.png
-                "></img>
-            Sleep
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Smirk.png
-                "></img>
-            Smirk
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Surprised.png
-                "></img>
-            Surprised
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Sus.png
-                "></img>
-            Sus
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Sweat_Drop.png
-                "></img>
-            Sweat Drop
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Talk.png
-                "></img>
-            Talk
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Woo.png
-                "></img>
-            Woo!
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Worried.png
-                "></img>
-            Worried
-            </div>
-        </div>
+        <script src="scrollparallax.js"></script>
     </body>
 </html>
