--- a/index.html
+++ b/index.html
@@ -23,111 +23,115 @@
 
     <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
     <body>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <a href="sitelist.html">Click here</a> to see my full site list!<br>
-                -Spax</span>
+        <div id="bg"></div>
+        <div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <a href="sitelist.html">Click here</a> to see my full site list!<br>
+                    yyyyyp§`£€ßaeiou-Spax</span>
+                </div>
             </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/claire/Neutral.png
+                        "></img>
+                    Hey nerds. It's me, Claire.
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/claire/Happy.png
+                        "></img>
+                    I am now on a poggers website. Woo!
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
                     <img src="
-                images/claire/Neutral.png
+                images/claire/Sigh.png
                     "></img>
-                Hey nerds. It's me, Claire.
+                Anyways it's time for some fucking debugging.
+                </div>
             </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
+            <div class="text-box flex-container unselectable">
+                <div>
                     <img src="
-                images/claire/Happy.png
+                images/aimottle/Unsure.png
                     "></img>
-                I am now on a poggers website. Woo!
+                Spax, you don't know what you're doing at all, do you?
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Worried.png
+                    "></img>
+                Well no... but-
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Worried.png
+                    "></img>
+                ...
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Pensive.png
+                    "></img>
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/aimottle/Neutral.png
+                    "></img>
+                    HOLY SHIT THEY ACTUALLY FIXED MOST OF THE CODE
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/claire/Aghast.png
+                    "></img>
+                    How tf-
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/spax/Dizzy.png
+                    "></img>
+                    I have no clue how I did it I'm so tired now
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                    <img src="
+                images/yoki/Sweat_Drop.png
+                    "></img>
+                (I still don't know where the <i>fuck</i> I am-)
+                </div>
             </div>
         </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/claire/Sigh.png
-                "></img>
-            Anyways it's time for some fucking debugging.
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/aimottle/Unsure.png
-                "></img>
-            Spax, you don't know what you're doing at all, do you?
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Worried.png
-                "></img>
-            Well no... but-
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Worried.png
-                "></img>
-            ...
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Pensive.png
-                "></img>
-            </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/aimottle/Neutral.png
-                "></img>
-                HOLY SHIT THEY ACTUALLY FIXED MOST OF THE CODE
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/claire/Aghast.png
-                "></img>
-                How tf-
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/spax/Dizzy.png
-                "></img>
-                I have no clue how I did it I'm so tired now
-            </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                <img src="
-            images/yoki/Sweat_Drop.png
-                "></img>
-            (I still don't know where the <i>fuck</i> I am-)
-            </div>
-        </div>
+        <script src="scrollparallax.js"></script>
         <!--
         //this works; don't fucking touch it kiddo
         <div class="text-box flex-container unselectable"  id="ominous-countdown"></div>
