--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -24,34 +24,37 @@
 
     </head>
     <body>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/spax/Smirk.png
-                    "></img>
-                Yo. Spax here. The javascript I wrote for this website doesn't work at the moment, so I'll be updating this manually until I fix it.
+        <div id="bg"></div>
+        <div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/spax/Smirk.png
+                        "></img>
+                    Yo. Spax here. The javascript I wrote for this website doesn't work at the moment, so I'll be updating this manually until I fix it.
+                </div>
             </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/spax/Look.png
-                    "></img>
-                Currently I'm at school, but I'll be at lunch very soon!<br>
-                (Also note that I'm in a very bad-service area of my school.)
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/spax/Look.png
+                        "></img>
+                    Currently I'm at school, but I'll be at lunch very soon!<br>
+                    (Also note that I'm in a very bad-service area of my school.)
+                </div>
             </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/spax/Blush.png
-                    "></img>
-                Thanks for visiting my site!
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/spax/Blush.png
+                        "></img>
+                    Thanks for visiting my site!
+                </div>
             </div>
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                (<a href="index.html">Click here</a> to go back to the main page!)
+            <div class="text-box flex-container unselectable">
+                <div>
+                    (<a href="index.html">Click here</a> to go back to the main page!)
+                </div>
             </div>
         </div>
         <!--<div class="text-box flex-container unselectable">
@@ -225,5 +228,6 @@
         }
         </script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="scrollparallax.js"></script>
     </body>
 </html>
