--- a/changelog.html
+++ b/changelog.html
@@ -24,7 +24,7 @@
     </head>
     <body>
         <div id="bg"></div>
-        <div id="content">
+        <div>
             <div class="text-box long-flex-container unselectable">
                 <div>
                     <span class=large>- Changelog -<br>
