--- a/rangalshutthehellup.html
+++ b/rangalshutthehellup.html
@@ -33,125 +33,129 @@
 
     </head>
     <body>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/claire/Mad.png
-                    "></img>
-                Rangal shut the hell up.
-            </div> 
+        <div id="bg"></div>
+        <div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/claire/Mad.png
+                        "></img>
+                    Rangal shut the hell up.
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/yoki/Upset.png
+                        "></img>
+                    You went too far this time.
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/este/Stare.png
+                        "></img>
+                    ...wtf
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/caina/Disapproval.png
+                        "></img>
+                    I can't believe you would say something like that.
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/dragon/Stern.png
+                        "></img>
+                    I hope you regret what you said.
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/prince/Appalled.png
+                        "></img>
+                    This is going in your permanent records!
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/tigertaur/Grin.png
+                        "></img>
+                    Now I'm considering beating you up.
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/woof/Look.png
+                        "></img>
+                    Ow... that hurt my feelings...
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/zera/Sneer.png
+                        "></img>
+                    God (me), even my hellions wouldn't say such a thing.
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/harp/Excited.png
+                        "></img>
+                    You're looking tastier than usual today.
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/aimottle/Angry.png
+                        "></img>
+                    BRO I AM GOING TO THROW A WRENCH AT YOU-
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/charles/Look_Down.png
+                        "></img>
+                    ...I have nothing to say
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/tem/Look_Down.png
+                        "></img>
+                    Rangal... that's not cool...
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/spax/Worried.png
+                        "></img>
+                    Rangal, I suggest you apologize for what you said.
+                </div> 
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                        <img src="
+                    images/spax/Disappointed.png
+                        "></img>
+                    (Probably.)
+                </div> 
+            </div>
         </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/yoki/Upset.png
-                    "></img>
-                You went too far this time.
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/este/Stare.png
-                    "></img>
-                ...wtf
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/caina/Disapproval.png
-                    "></img>
-                I can't believe you would say something like that.
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/dragon/Stern.png
-                    "></img>
-                I hope you regret what you said.
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/prince/Appalled.png
-                    "></img>
-                This is going in your permanent records!
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/tigertaur/Grin.png
-                    "></img>
-                Now I'm considering beating you up.
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/woof/Look.png
-                    "></img>
-                Ow... that hurt my feelings...
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/zera/Sneer.png
-                    "></img>
-                God (me), even my hellions wouldn't say such a thing.
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/harp/Excited.png
-                    "></img>
-                You're looking tastier than usual today.
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/aimottle/Angry.png
-                    "></img>
-                BRO I AM GOING TO THROW A WRENCH AT YOU-
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/charles/Look_Down.png
-                    "></img>
-                ...I have nothing to say
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/tem/Look_Down.png
-                    "></img>
-                Rangal... that's not cool...
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/spax/Worried.png
-                    "></img>
-                Rangal, I suggest you apologize for what you said.
-            </div> 
-        </div>
-        <div class="text-box flex-container unselectable">
-            <div>
-                    <img src="
-                images/spax/Disappointed.png
-                    "></img>
-                (Probably.)
-            </div> 
-        </div>
+        <script src="scrollparallax.js"></script>
     </body>
 </html>
