--- a/changelog.html
+++ b/changelog.html
@@ -25,9 +25,9 @@
     <body>
         <div id="bg"></div>
         <div>
-            <div class="text-box long-flex-container unselectable">
+            <div class="text-box long-flex-container unselectable" style="text-align: center;">
                 <div>
-                    <span class=large>- Changelog -<br>
+                    <span class="large">- Changelog -<br>
                     Manually documenting major changes to the site<br></span>
                     <br>
                 </div>
