FUCKING FINALLY FIXED THE PARALLAX BG EFFECT TYSM SORA WOOOOO

--- a/changelog.html
+++ b/changelog.html
@@ -23,8 +23,7 @@
 
     </head>
     <body>
-        <div id="bg"></div>
-        <div>
+        <div id="bg">
             <div class="text-box long-flex-container unselectable" style="text-align: center;">
                 <div>
                     <span class="large">- Changelog -<br>
