--- a/iwanttodie.html
+++ b/iwanttodie.html
@@ -20,8 +20,7 @@
         
         <link rel="stylesheet" href="styles.css" type=text/css>
     <body>
-        <div id="bg"></div>
-        <div>
+        <div id="bg">
             <div class="text-box flex-container unselectable">
                 <div>
                     Hi guys.<br>
