--- a/rangalshutthehellup.html
+++ b/rangalshutthehellup.html
@@ -33,8 +33,7 @@
 
     </head>
     <body>
-        <div id="bg"></div>
-        <div>
+        <div id="bg">
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
