--- a/sitelist.html
+++ b/sitelist.html
@@ -22,8 +22,7 @@
 
     <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
     <body>
-        <div id="bg"></div>
-        <div>
+        <div id="bg">
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
