--- a/isspaxatschool.html
+++ b/isspaxatschool.html
@@ -24,8 +24,7 @@
 
     </head>
     <body>
-        <div id="bg"></div>
-        <div>
+        <div id="bg">
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
