--- a/plannedchanges.html
+++ b/plannedchanges.html
@@ -23,8 +23,7 @@
 
     </head>
     <body>
-        <div id="bg"></div>
-        <div>
+        <div id="bg">
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
