Fixed some descriptions and titles

--- a/changelog.html
+++ b/changelog.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content="All Spax DEP Face Sprites">
-        <meta property="og:description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
+        <meta property="og:description" content="Manually documenting major changes to the site.">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
         <link rel="icon" href="Smirk_Circle.png"></link>
