--- a/mrc3timezones.html
+++ b/mrc3timezones.html
@@ -24,8 +24,7 @@
 
     </head>
     <body>
-        <div id="bg"></div>
-        <div>
+        <div id="bg">
             <div class="text-box flex-container unselectable">
                 <div id="date1">
                         <img src="
@@ -55,21 +54,34 @@
                     (And <a href="index.html">click here</a> to go back to the main page!)
             <script>
                 const d = new Date();
-                let SpaxTime = [d.getUTCHours()-6,d.getUTCMinutes(),d.getUTCHours()+":"+d.getUTCMinutes()];
-                let PentaTime = [d.getUTCHours(),d.getUTCMinutes(),d.getUTCHours()+":"+d.getUTCMinutes()];
-                let SplitTime = [d.getUTCHours(),d.getUTCMinutes(),d.getUTCHours()+":"+d.getUTCMinutes()];
+                let SpaxTime = [d.getUTCHours()-7,d.getUTCMinutes(),d.getUTCHours()+":"+d.getUTCMinutes()];
+                let PentaTime = [d.getUTCHours()+7,d.getUTCMinutes(),d.getUTCHours()+":"+d.getUTCMinutes()];
+                let SplitTime = [d.getUTCHours()-5,d.getUTCMinutes(),d.getUTCHours()+":"+d.getUTCMinutes()];
                 
-                
-                document.getElementById("date1").innerHTML = SpaxTime[2];
-                document.getElementById("date2").innerHTML = PentaTime[2];
-                document.getElementById("date3").innerHTML = SplitTime[2];
-                if ((SpaxTime[0]+1)<1){
-                SpaxTime[0]=23-SpaxTime[0];
-                    if ((spaxTime[0])>12){
-                    SpaxTime[2]=12-SpaxTime[0]+":"+SpaxTime[1]+" PM";
+                toTimezone(SpaxTime);
+                toTimezone(PentaTime);
+                toTimezone(SplitTime);
+
+                function toTimezone(person){
+                    if ((person[0]<0)||(person[0]>23)){
+                    person[0]=math.Abs(23-person[0])+1;
+                        if ((person[0])>13){
+                        person[2]=(person[0]-12)+":"+person[1]+" PM";
+                        } else {
+                        person[2]=person[0]+":"+person[1]+" AM";
+                        }
                     } else {
+                        if ((person[0])>13){
+                        person[2]=(person[0]-12)+":"+person[1]+" PM";
+                        } else {
+                        person[2]=person[0]+":"+person[1]+" AM";
+                        }
                     }
                 }
+
+                document.getElementById("date1").innerHTML = "Spax's current time is "+SpaxTime[2]+"! They're in MST.";
+                document.getElementById("date2").innerHTML = "Pentaxel's current time is "+PentaTime[2]+"! He's in GMT+7.";
+                document.getElementById("date3").innerHTML = "Splittikin's current time is "+SplitTime[2]+"! She's in EST.";
             </script>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
             <script src="scrollparallax.js"></script>
