--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                     <a href="sitelist.html">Click here</a> to see my full site list!<br>
-                    yyyyyp§`£€ßaeiou-Spax</span>
+                    -Spax</span>
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
