--- a/mrc3timezones.html
+++ b/mrc3timezones.html
@@ -25,6 +25,11 @@
     <body>
         <div id="bg">
             <div class="text-box flex-container unselectable">
+                <div>
+                    (Note: Reload the page to refresh the text boxes!)
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
                 <div id="date1">
                     This text should be replaced by the js. If you're seeing this, it means that my code is broken :(
                 </div>
@@ -42,6 +47,8 @@
             <div class="text-box flex-container unselectable">
                 <div>
                     (And <a href="index.html">click here</a> to go back to the main page!)
+                </div>
+            </div>
             <script src="timezonething.js"></script>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
             <script src="scrollparallax.js"></script>
