--- a/html/allspaxfaces.html
+++ b/html/allspaxfaces.html
@@ -8,8 +8,8 @@
         <meta property="og:title" content="All Spax DEP Face Sprites">
         <meta property="og:description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/faces/spax/Smirk.png">
-        <link rel="icon" href="../icons/Smirk_Circle.png"></link>
+        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png">
+        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <title>All of Spax's Face Sprites</title>
