--- a/html/changelog.html
+++ b/html/changelog.html
@@ -9,7 +9,7 @@
         <meta property="og:description" content="Manually documenting major changes to the site.">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png">
-        <link rel="icon" href="../Smirk_Circle.png"></link>
+        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <title>Changelog</title>
