--- a/html/iwanttodie.html
+++ b/html/iwanttodie.html
@@ -10,7 +10,7 @@
         <meta property="og:description" content="I am in pain.">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="../images/faces/spax/Pensive.png">
-        <link rel="icon" href="../Pensive_Circle.png"></link>
+        <link rel="icon" href="../images/icons/Pensive_Circle.png"></link>
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <title>I want to die.</title>
     </head>
