--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -9,8 +9,8 @@
         <meta property="og:title" content="Spax's Site List">
         <meta property="og:description" content="A place that links every public page to my website.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../../images/faces/spax/Smirk.png">
-        <link rel="icon" href="../Smirk_Circle.png"></link>
+        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png">
+        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <title>Spax's Site List</title>
     </head>
