--- a/html/resources.html
+++ b/html/resources.html
@@ -10,7 +10,7 @@
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="../../images/faces/spax/Smirk.png">
         <meta http-equiv="Refresh" content="0; url='sitelist.html'"/>
-        <link rel="icon" href="../Smirk_Circle.png"></link>
+        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <title>All of Spax's Face Sprites</title>
