--- a/index.html
+++ b/index.html
@@ -4,23 +4,20 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
         <meta property="og:title" content="Spax's Site">
         <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png">
-        <link rel="icon" href="../Smirk_Circle.png"></link>
-        <link rel="stylesheet" href="../styles.css" type=text/css>
-        <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <meta name="og:image" itemprop="image" content="images/faces/spax/Smirk.png">
+        <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
+        <link rel="stylesheet" href="css/styles.css" type=text/css>
         <title>Spax's Site</title>
     </head>
     <body>
         <div id="bg">
             <div class="text-box flex-container unselectable">
                 <div>
-                    <a href="sitelist.html">Click here</a> to see my full site list!<br>
+                    <a href="html/sitelist.html">Click here</a> to see my full site list!<br>
                     -Spax</span>
                 </div>
             </div>
@@ -124,7 +121,7 @@
                 </div>
             </div>
         </div>
-        <script src="../scrollparallax.js"></script>
+        <script src="js/scrollparallax.js"></script>
         <!--
         //this works; don't fucking touch it kiddo
         <div class="text-box flex-container unselectable"  id="ominous-countdown"></div>
