finally fixed js for timezone (hopefully last too)

--- a/html/mrc3timezones.html
+++ b/html/mrc3timezones.html
@@ -34,6 +34,11 @@
                     This text should be replaced by the js. If you're seeing this, it means that my code is broken :(
                 </div>
             </div>
+            <!--<div class="text-box flex-container unselectable">
+                <div id="date4">
+                    This text should be replaced by the js. If you're seeing this, it means that my code is broken :(
+                </div>
+            </div>-->
             <div class="text-box flex-container unselectable">
                 <div>
                     (And <a href="index.html">click here</a> to go back to the main page!)
