final file sync and never again :fumming:

--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -9,21 +9,7 @@
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="/images/faces/spax/Smirk.png">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
-        <link rel="icon" href="../Smirk_Circle.png"></link>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <!--phucking bootstrap-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
-<<<<<<< HEAD:html/isspaxatschool.html
-        <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
-        <link rel="icon" href="Smirk_Circle.png"></link>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="jquery.countdown.min.js"></script>
-=======
->>>>>>> parent of 49397ac (stuff + beta changes folder):isspaxatschool.html
         <title>Is Spax At School?</title>
     </head>
     <body>
@@ -39,43 +25,23 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-<<<<<<< HEAD:html/isspaxatschool.html
-                    images/faces/spax/Blush.png
-                        "></img>
-                    Currently I'm TOO LAZY TO EDIT THIS EVERY FUCKING TIME I TRANSITION.
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div>
-                        <img src="
-=======
->>>>>>> parent of 49397ac (stuff + beta changes folder):isspaxatschool.html
                     images/faces/spax/Look.png
                         "></img>
-                    Yea... no... this page is not gonna be useful until I actually fix the javascript.
+                    Currently I'm at school, but I'll be at lunch very soon!<br>
+                    (Also note that I'm in a very bad-service area of my school.)
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-<<<<<<< HEAD:html/isspaxatschool.html
-                    images/faces/spax/Smirk.png
-=======
                     images/faces/spax/Blush.png
->>>>>>> parent of 49397ac (stuff + beta changes folder):isspaxatschool.html
                         "></img>
-                    But for now, I'll leave you with a (working) clock configured to my timezone. (ACTUALLY NO IT'S NOT WORKING RIGHT NOW)
-                </div>
-            </div>
-            <div class="text-box flex-container unselectable">
-                <div id="date4">
-                    This text should be replaced by the js. If you're seeing this, it means that I AM GOING TO FIRE MYSELF
-                    </span>
+                    Thanks for visiting my site!
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    (<a href="../index.html">Click here</a> to go back to the main page!)
+                    (<a href="index.html">Click here</a> to go back to the main page!)
                 </div>
             </div>
         </div>
@@ -249,14 +215,6 @@
             }
         }
         </script>
-<<<<<<< HEAD:html/isspaxatschool.html
-        <script src="../js/timezonething.js" type=text/javascript></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="../js/scrollparallax.js" type=text/javascript></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="scrollparallax.js"></script>
-=======
-        <script src="../js/scrollparallax.js" type=text/javascript></script>
->>>>>>> parent of 49397ac (stuff + beta changes folder):isspaxatschool.html
     </body>
 </html>
