--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-<<<<<<< HEAD:html/index.html
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-=======
->>>>>>> parent of 49397ac (stuff + beta changes folder):index.html
         <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
         <meta property="og:title" content="Spax's Site">
         <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
@@ -15,28 +11,13 @@
         <meta name="og:image" itemprop="image" content="images/faces/spax/Smirk.png">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <link rel="stylesheet" href="css/styles.css" type=text/css>
-<<<<<<< HEAD:html/index.html
-        <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
-        <link rel="icon" href="Smirk_Circle.png"></link>
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png">
-        <link rel="icon" href="../Smirk_Circle.png"></link>
-        <!--phucking bootstrap-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <title>Spax's Site</title>
-=======
         <title>Spax's Site</title>
     </head>
->>>>>>> parent of 49397ac (stuff + beta changes folder):index.html
     <body>
         <div id="bg">
             <div class="text-box flex-container unselectable">
                 <div>
-                    <a href="../html/sitelist.html">Click here</a> to see my full site list!<br>
+                    <a href="html/sitelist.html">Click here</a> to see my full site list!<br>
                     -Spax</span>
                 </div>
             </div>
