ok added bootstrap

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="og:image" itemprop="image" content="images/faces/spax/Smirk.png">
         <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <link rel="stylesheet" href="css/styles.css" type=text/css>
+        <meta http-equiv="Refresh" content="0; url='html/index.html'"/>
         <title>Spax's Site</title>
     </head>
     <body>
