--- a/html/allspaxfaces.html
+++ b/html/allspaxfaces.html
@@ -9,6 +9,11 @@
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <!--phucking bootstrap-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <title>All of Spax's Face Sprites</title>
     </head>
@@ -32,122 +37,122 @@
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
+                        <img src="
                     ../images/faces/spax/Disappointed.png
-                    "></img>
+                        "></img>
                 Disappointed
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Dizzy.png
-                    "></img>
-                Dizzy
+                        <img src="
+                    ../images/faces/spax/Dizzy.png
+                        "></img>
+                    Dizzy
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Enraged.png
-                    "></img>
-                Enraged
+                        <img src="
+                    ../images/faces/spax/Enraged.png
+                        "></img>
+                    Enraged
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Happy.png
-                    "></img>
-                Happy
+                        <img src="
+                    ../images/faces/spax/Happy.png
+                        "></img>
+                    Happy
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Look.png
-                    "></img>
-                Look
+                        <img src="
+                    ../images/faces/spax/Look.png
+                        "></img>
+                    Look
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Neutral.png
-                    "></img>
-                Neutral
+                        <img src="
+                    ../images/faces/spax/Neutral.png
+                        "></img>
+                    Neutral
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Pensive.png
-                    "></img>
-                Pensive
+                        <img src="
+                    ../images/faces/spax/Pensive.png
+                        "></img>
+                    Pensive
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Sleep.png
-                    "></img>
-                Sleep
+                        <img src="
+                    ../images/faces/spax/Sleep.png
+                        "></img>
+                    Sleep
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Smirk.png
-                    "></img>
-                Smirk
+                        <img src="
+                    ../images/faces/spax/Smirk.png
+                        "></img>
+                    Smirk
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Surprised.png
-                    "></img>
-                Surprised
+                        <img src="
+                    ../images/faces/spax/Surprised.png
+                        "></img>
+                    Surprised
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Sus.png
-                    "></img>
-                Sus
+                        <img src="
+                    ../images/faces/spax/Sus.png
+                        "></img>
+                    Sus
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Sweat_Drop.png
-                    "></img>
-                Sweat Drop
+                        <img src="
+                    ../images/faces/spax/Sweat_Drop.png
+                        "></img>
+                    Sweat Drop
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Talk.png
-                    "></img>
-                Talk
+                        <img src="
+                    ../images/faces/spax/Talk.png
+                        "></img>
+                    Talk
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Woo.png
-                    "></img>
-                Woo!
+                        <img src="
+                    ../images/faces/spax/Woo.png
+                        "></img>
+                    Woo!
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    <img src="
-                ../images/faces/spax/Worried.png
-                    "></img>
-                Worried
+                        <img src="
+                    ../images/faces/spax/Worried.png
+                        "></img>
+                    Worried
                 </div>
             </div>
         </div>
