--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -9,6 +9,11 @@
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="/images/faces/spax/Smirk.png">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <!--phucking bootstrap-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <title>Is Spax At School?</title>
     </head>
@@ -17,7 +22,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    images/faces/spax/Smirk.png
+                    ../images/faces/spax/Smirk.png
                         "></img>
                     Yo. Spax here. The javascript I wrote for this website doesn't work at the moment, so I'll be updating this manually until I fix it.
                 </div>
@@ -25,7 +30,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    images/faces/spax/Look.png
+                    ../images/faces/spax/Look.png
                         "></img>
                     Currently I'm at school, but I'll be at lunch very soon!<br>
                     (Also note that I'm in a very bad-service area of my school.)
@@ -34,7 +39,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    images/faces/spax/Blush.png
+                    ../images/faces/spax/Blush.png
                         "></img>
                     Thanks for visiting my site!
                 </div>
