--- a/html/iwanttodie.html
+++ b/html/iwanttodie.html
@@ -10,6 +10,11 @@
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="../images/faces/spax/Pensive.png">
         <link rel="icon" href="../images/icons/Pensive_Circle.png"></link>
+        <!--phucking bootstrap-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <title>I want to die.</title>
     </head>
@@ -230,7 +235,7 @@
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
-                    Chances are I probably won't commit suicide, sadly. Because I don't have the guts to do it. Stabbing myself, cutting my throat, hanging myself, starving, drowning, jumping up in the air and landing on my head, jumping off of a cliff, suffocating, drugs, you name it. 
+                    Chances are I probably won't commit the s word (school blacklisted the word), sadly. Because I don't have the guts to do it. Stabbing myself, cutting my throat, hanging myself, starving, drowning, jumping up in the air and landing on my head, jumping off of a cliff, suffocating, drugs, you name it. 
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
