--- a/html/resources.html
+++ b/html/resources.html
@@ -12,6 +12,11 @@
         <meta http-equiv="Refresh" content="0; url='sitelist.html'"/>
         <!---->
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <!--phucking bootstrap-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!---->
         <link rel="stylesheet" href="../css/styles.css" type=text/css>
         <title>All of Spax's Face Sprites</title>
     </head>
