--- a/html/thecountdown.html
+++ b/html/thecountdown.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<!--haha hi, don't mind this site: I'm not using it right now-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -10,15 +11,12 @@
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="/images/spax/Smirk.png">
         <link rel="icon" href="/images/spax/Dizzy.png"></link>
-        
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-        <!-- Bootstrap JavaScript -->
-        
-        <link rel="stylesheet" href="styles.css" type=text/css>
-
-    <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
+        <!--phucking bootstrap-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!---->
+    </head>
     <body>
         <div id="ominous-countdown"></div>
         </div>
